# tiny_kernel_map

./: .gitmodules  CMakeLists.txt  Makefile  build.sh  go.mod  kernelmap_test.go  main.go  readme.txt
bpfs/: CMakeLists.txt  common.c  common.h  crc.h  hash.h  kernel.bpf.c  md5.h  process.bpf.c  readme.txt  sha256.h
bpfs/libbpf/: .travis.yml  README.md
bpfs/libbpf/.github/workflows/: coverity.yml
bpfs/libbpf/src/: libbpf.c  libbpf_internal.h  linker.c
bpfs/libbpf/travis-ci/managers/: debian.sh
common/: bpfworker.go  maps.go  point.go  readme.txt  utils.go
ebpf_utils/: CMakeLists.txt  bpf_header.h  kernel.bpf.c  kernel_info.c  kernel_info.h
ebpf_utils/libbpf/: .lgtm.yml
ebpf_utils/libbpf/include/uapi/linux/: bpf.h
ebpf_utils/libbpf/scripts/: sync-kernel.sh
ebpf_utils/libbpf/src/: bpf_helper_defs.h
kstatic/: kstatic.go
src/: EbpfKv.cc  EbpfKv.h  common.c  common.h  kernel_mapserver.c  kstatic_info_collector.c  kstatic_info_collector.h
tests/: Makefile  hello.c  readme.txt
workers/: kstatic.go  process.go  readme.txt
